# agent_document

./: .gitignore  README.md  pyproject.toml
data/: action.csv  building.csv  documents.csv  drawer.csv  floor.csv  room.csv  shelf.csv  slot.csv  tracks.csv  user.csv
knowledge/: csv_info.txt  csv_schema.txt
src/AgentDocumentsManager/: crew.py  main.py
src/AgentDocumentsManager/config/: agents.yaml  tasks.yaml
src/AgentDocumentsManager/tools/: __init__.py  document_query_tool.py  location_query_tool.py
src/DocumentsManager/: crew.py  main.py
src/DocumentsManager/config/: agents.yaml  tasks.yaml
src/DocumentsManager/tools/: document_query_tool.py  location_query_tool.py  user_query_tool.py
src/documents_manager/: crew.py  main.py
src/documents_manager/config/: agents.yaml  tasks.yaml
src/documents_manager/tools/: document_query_tool.py  location_query_tool.py  user_query_tool.py
