[project]
name = "documents_manager"
version = "0.1.0"
description = "Hệ thống quản lý tài liệu"
authors = [{ name = "Trần Nhật Trường", email = "truongbit.devpro@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.27.1",
]

[project.scripts]
nano_agent = "documents_manager.main:run"
run_crew = "documents_manager.main:run"
train = "documents_manager.main:train"
replay = "documents_manager.main:replay"
test = "documents_manager.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
